--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
   <!-- Header -->
  <div class="nav-wrapper">
     <header>
-        <h1 id="nametag">Maryia Radkevich</h1>  
+        <h2 id="nametag">Maryia Radkevich</h2>  
       </header> 
    <ul>     
-      <li id="about" class="menu"><a href="#">About</a></li>
-      <li id="Portfolio" class="menu"><a href="portfolio.html">Portfolio</a></li>
-      <li id="Contact" class="menu"><a href="contacts.html">Contact</a></li>
+      <li id="about" class="menu"><a href="#">About</a></li><hr id="ver">
+      <li id="Portfolio" class="menu"><a href="portfolio.html">Portfolio</a></li><hr id="ver">
+      <li id="Contact" class="menu"><a href="contacts.html">Contact</a></li id="ver">
    </ul>
  
 </div> 
 
 <br>
  <!-- Image -->
- <div id="main">
+<div id="main">
    <div id="header">
-     <h1>About me</h1>
-  </div>
-    <br>
-<div id="about">
+     <h2>About me</h2>
+   </div>
+ <hr>
+    <div id="about">
  <img src="https://dummyimage.com/200/200/888/fff.png&text=placeholder" alt="Placeholder" height="200px" width="200">
+    </div>
 
-  <br>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <div id="paragraphs">
+<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
+    </div>
+</div>
 
-</div>
-</div>
 <!-- Footer -->
 <footer>Copyright</footer>
 
