--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h2 id="nametag">Maryia Radkevich</h2>  
       </header> 
    <ul>     
-      <li id="about" class="menu"><a href="#">About</a></li><hr id="ver">
-      <li id="Portfolio" class="menu"><a href="portfolio.html">Portfolio</a></li><hr id="ver">
-      <li id="Contact" class="menu"><a href="contacts.html">Contact</a></li id="ver">
+      <li id="about" class="menu"><a href="#">About</a></li>
+      <li id="Portfolio" class="menu"><a href="portfolio.html">Portfolio</a></li>
+      <li id="Contact" class="menu"><a href="contacts.html">Contact</a></li>
    </ul>
  
 </div> 
